--- a/Src/indexEn.html
+++ b/Src/indexEn.html
@@ -3,10 +3,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Adopting Form">
   <title>Adopting Form</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="language">
+    <img class="imgSvg" src="../Assets/languageIcon.svg" alt=""/>
+      <a class="english" href="./indexEn.html"><b>EN</b></a>
+      <a class="spanish" href="./indexEs.html">ES</a>
+  </div>
   <h1 id="title">Animal Shelter-Adopting Form</h1>
   <p id="description">Feel free to take your time! Do not worry, any answer is correct, this form is just to know a bit more about you </p>
   <form id="survey-form" method="post" action="">
@@ -17,7 +23,7 @@
       <label id="email-label">Email:
         <input required id="email" name="email" type="email" placeholder="Enter Your Email">
       </label>
-      <label id="number-label">Imput Your Age (years):
+      <label id="number-label">Imput your Age (years):
         <input required id="number" name="number" type="number" min="18" max="120" placeholder="Age">
       </label>
     </fieldset>
@@ -46,12 +52,12 @@
         <input id="adopt-dog" class="inline" name="adopt" type="radio" value="6"> Dog(s)
       </label>
     </fieldset>
-    <fieldset> Be honest and select as many options as you want, this will help us to match you with your perfect future Friend!
+    <fieldset> Be honest and select as many options as you want, this will help us to match you with your <b>perfect future friend</b>!
       <label id="have-a-pet-label">
-        <input id="have-a-pet" class="inline" name="have-a-pet" type="checkbox" value="7"> I have a pet at home
+        <input id="have-a-pet" class="inline" name="have-a-pet" type="checkbox" value="7"> I have a pet(s) at home
       </label>
       <label id="had-a-pet-label">
-        <input id="had-a-pet" class="inline" name="had-a-pet" type="checkbox" value="8"> I have had pets <b>Before</b>
+        <input id="had-a-pet" class="inline" name="had-a-pet" type="checkbox" value="8"> I have a pet(s) at home <b>Before</b>
       </label>
       <label id="dont-mind-age-label">
         <input id="dont-mind-age" class="inline" name="dont-mind-age" type="checkbox" value="9"> I dont mind about <b>its Age</b>
@@ -69,7 +75,7 @@
         <input id="kittens-puppies" class="inline" name="kittens-puppies" type="checkbox" value="13"> I prefer to adopt <b>Kittens</b>/<b>Puppies</b>
       </label>
     </fieldset>
-    <fieldset>If you could write a letter to convince to your future furry friend to go with you, what would you say?
+    <fieldset>If you could write a letter to convince to your future furry Friend to go with you, what would you say?
       <label id="letter-label">
         <textarea id="letter" name="letter" rows="6" cols="30" placeholder="Hey buddy! I really want to let you know that... " ></textarea>
       </label>
