--- a/Src/index.html
+++ b/Src/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="language">
     <img class="imgSvg" src="../Assets/languageIcon.svg" alt="Set Lenguage Icon" />
-    <a class="english" href="./indexEn.html"><b>EN</b></a>
+    <a class="english" href="./index.html"><b>EN</b></a>
     <a class="spanish" href="./indexEs.html">ES</a>
   </div>
   <div class="backgroundImageDiv">
