--- a/Src/indexEs.html
+++ b/Src/indexEs.html
@@ -12,8 +12,8 @@
 <body>
   <div class="language">
     <img class="imgSvg" src="../Assets/languageIcon.svg" alt="Set Lenguage Icon" />
-    <a class="english" href="./index.html">EN</a>
-    <a class="spanish" href="./indexEs.html"><b>ES</b></a>
+    <a class="english" href="../index.html">EN</a>
+    <a class="spanish" href="../Src/indexEs.html"><b>ES</b></a>
   </div>
   <div class="backgroundImageDiv">
     <h1 id="title">Formulario de Adopción</h1>
