--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Adopting Form">
   <title>Adopting Form</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./Src/styles.css">
 </head>
 
 <body>
   <div class="language">
     <img class="imgSvg" src="../Assets/languageIcon.svg" alt="Set Lenguage Icon" />
     <a class="english" href="./index.html"><b>EN</b></a>
-    <a class="spanish" href="./indexEs.html">ES</a>
+    <a class="spanish" href="./Src/indexEs.html">ES</a>
   </div>
   <div class="backgroundImageDiv">
     <h1 id="title">Animal Shelter-Adopting Form</h1>
