--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Adopting Form">
   <title>Adopting Form</title>
-  <link rel="stylesheet" href="./Src/styles.css">
+  <link rel="stylesheet" href="./Assets/languageIcon.svg">
 </head>
 
 <body>
