--- a/Src/indexEs.html
+++ b/Src/indexEs.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Formulario de Adopción">
   <title>Formulario de Adopción</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./styles.css">
+  <link rel="icon" href="../Assets/favicon.png" type="image/png">
 </head>
 
 <body>
   <div class="language">
-    <img class="imgSvg" src="../Assets/languageIcon.svg" alt="Set Lenguage Icon" />
+    <img class="imgSvg" src="../Assets/languageIcon.svg" alt="Language Icon" />
     <a class="english" href="../index.html">EN</a>
     <a class="spanish" href="../Src/indexEs.html"><b>ES</b></a>
   </div>
