--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Adopting Form">
-  <title>Adopting Form</title>
-  <link rel="stylesheet" href="./Assets/languageIcon.svg">
+  <meta name="description" content="Adoption Form">
+  <title>Adoption Form</title>
+  <link rel="stylesheet" href="./Src/styles.css">
+  <link rel="icon" href="./Assets/favicon.png" type="image/png">
 </head>
 
 <body>
   <div class="language">
-    <img class="imgSvg" src="../Assets/languageIcon.svg" alt="Set Lenguage Icon" />
+    <img class="imgSvg" src="./Assets/languageIcon.svg" alt="Language Icon" />
     <a class="english" href="./index.html"><b>EN</b></a>
     <a class="spanish" href="./Src/indexEs.html">ES</a>
   </div>
   <div class="backgroundImageDiv">
-    <h1 id="title">Animal Shelter-Adopting Form</h1>
+    <h1 id="title">Animal Shelter-Adoption Form</h1>
     <p id="description">Feel free to take your time! Do not worry, any answer is correct, this form is just to know a
       bit more about you </p>
     <form id="survey-form" method="post" action="">
