--- a/Src/indexEs.html
+++ b/Src/indexEs.html
@@ -18,9 +18,10 @@
       <a class="spanish" href="../Src/indexEs.html"><b>ES</b></a>
     </div>
     <form id="survey-form" method="post" action="">
-    <h1 id="title">Formulario de Adopción</h1>
-    <p id="description">Tómate el tiempo que necesites! todas las respuestas son correctas, este formulario es solo para
-      conocerte un poco mejor </p>
+      <h1 id="title">Formulario de Adopción</h1>
+      <p id="description">Tómate el tiempo que necesites! todas las respuestas son correctas, este formulario es solo
+        para
+        conocerte un poco mejor </p>
       <fieldset>
         <label id="name-label">Nombre:
           <input required id="name" name="name" type="text" placeholder="Introduce Tu Nombre">
